--- a/ng2-components/ng2-activiti-processlist/src/components/activiti-process-instance-tasks.component.css
+++ b/ng2-components/ng2-activiti-processlist/src/components/activiti-process-instance-tasks.component.css
@@ -4,6 +4,17 @@
 
 .activiti-label {
     font-weight: bolder;
+    vertical-align: top;
+}
+
+.activiti-label.mdl-badge[data-badge]:after {
+    right: -27px;
+    top: -2px;
+}
+
+.activiti-label + .icon {
+    position: relative;
+    top: -2px;
 }
 
 .material-icons:hover {
